UIP-1083 --> Add new lock icon to icon fonts, add ability to display the locak icon next to the FormTextField component, and display icon in CSS Tips section
Change-Id: I067f6f2882b020a2a17bee3eb08d0ab2c3442aac

--- a/packages/ui-library/src/css/help.scss
+++ b/packages/ui-library/src/css/help.scss
@@ -10,6 +10,14 @@
     background: transparent;
     cursor: pointer;
     line-height: 1em;
+    
+    @mixin default-icon-styles {
+        height: $inline-icon-height;
+        font-size: $inline-icon-height;
+        line-height: $inline-icon-height;
+        color: $color-blue-grey;
+        display: inline-block;
+    }
 
     &.inline {
         &:hover {
@@ -18,15 +26,16 @@
             }
         }
         .icon-help {
-            height: $inline-icon-height;
+            @include default-icon-styles;
             width: $inline-icon-height - 1px;
-            font-size: $inline-icon-height;
-            line-height: $inline-icon-height;
-            color: $color-blue-grey;
-            display: inline-block;
-            &:before { //change to icon-help-rounded
+            &:before { 
+                //change to icon-help-rounded
                 content: '\48';
             }
+        }
+        .icon-lock {
+            @include default-icon-styles;
+            padding-left: 2px;
         }
     }
     .icon-help {
@@ -193,7 +202,6 @@
         .tooltip-text {
             top: 100%;
             bottom: auto;
-
 
             .tooltip-text-content {
                 margin-top: $pointer-size;
