UIP-1108: fix ui-library code snippets in tutorials and demo cut-off horizontally
Change-Id: I4e2168ea2d252d02e2fbaecd7f0fe5cfe3867c3c

--- a/packages/ui-library/src/demo/css/layout.scss
+++ b/packages/ui-library/src/demo/css/layout.scss
@@ -157,10 +157,15 @@ $sidenav-lineheight: 22px;
 	.markup-wrapper {
 		overflow:hidden;
 	}
+	.inner-markup-wrapper {
+		overflow-x: auto;
+		padding: 1em;
+	}
 	pre.language-markup, pre.language-javascript, .output {
 		position: relative;
 		margin-top: 32px;
 		margin-bottom: 0;
+		padding: 0;
 		@include border-radius(3px);
 
 		&:before {
