UIP-1123 : tweak css so that the inline/pill version of the ellipsis loader renders correctly
Change-Id: I00e8994a0e41da71dcde36e8ca61b07c83bd9c39

--- a/packages/ui-library/src/css/buttons.scss
+++ b/packages/ui-library/src/css/buttons.scss
@@ -299,6 +299,11 @@ button.ellipsis-loader-button {
                 color: $color-active-blue;
             }
         }
+        &.inline {
+            .icon-ellipsis {
+                top: 9px;
+            }
+        }
     }
 }
 
