--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -886,69 +886,41 @@ input[type=file] {
         text-transform: none;
     }
     .file-info {
+        display: block;
+        position: relative;
         line-height: 1em;
-        padding: 0;
         font-family: $font-pn-regular;
-        display: inline-block;
+        margin: 10px 0 0 1px;
+
+        .icon-file {
+            font-size: 10px;
+            padding-right: 5px;
+            display: inline-block;
+        }
+        &:before {
+            display: none;
+        }
 
         a.file-remove {
-            display: none;
             font-size: 14px;
             line-height: 1em;
-            margin: 5px 10px 0 0;
+            vertical-align: middle;
         }
         .file-name {
+            display: inline-block;
             font-size: 14px;
             line-height: 1em;
-            margin: 10px 20px 0 0;
             color: $color-midnight;
-            .icon-file {
-                display: none;
-            }
-        }
-        // within a details tooltip, login modal
-        &.stacked {
-            .file-info {
-                margin-bottom: 0;
-            }
-            .file-name {
-                vertical-align: top;
-                max-width: 250px;
-                display: block;
+            max-width: 250px;
+            vertical-align: middle;
+            margin: 0 10px 0 0;
 
-                @include text-truncate;
-                a.file-remove {
-                    margin-bottom: 0;
-                }
-            }
+            @include text-truncate;
         }
     }
     &.file-selected {
         .file-size {
             display: none;
-        }
-        .file-info {
-            position: relative;
-            display: inline-block;
-            margin-bottom: 10px;
-            .icon-file {
-                font-size: 10px;
-                padding-right: 5px;
-                display: inline-block;
-            }
-            &:before {
-                display: none;
-            }
-            &.stacked {
-                margin-bottom: 0;
-                a.file-remove {
-                    margin-bottom: 0;
-                }
-            }
-        }
-        a.file-remove {
-            display: inline-block;
-            margin-bottom: 10px;
         }
     }
     &.image-upload {
@@ -1049,10 +1021,6 @@ input[type=file] {
             position: absolute;
             top: 65px;
             left: $img-width + 15px;
-        }
-        .file-info {
-            display: block;
-            float: none;
         }
         &.file-selected {
             .input-image-thumb {
@@ -1758,8 +1726,9 @@ input[type=file] {
     }
     &.input-file-upload {
         .form-error-icon {
-            top: 5px;
-            right: -$icon-spacing;
+            top: auto;
+            bottom: 21px;
+            right: -16px;
         }
         .form-error-message {
             top: calc(100% + 5px);
@@ -1891,7 +1860,7 @@ input[type=file] {
 
 .disabled {
     $disabled-opacity: 0.4;
-    $normal-opacity: 1.0;
+    $normal-opacity: 1;
 
     font-style: normal;
     cursor: default;
