PID-3545 : tighten css to account for nesting
Change-Id: I95ceab4d02d7180e7e4781c62200ce521f5e512e

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -881,9 +881,10 @@ input[type=file] {
 
         @include opacity(0);
     }
-    .choose {
+    button.choose {
         display: block;
         text-transform: none;
+        margin: 0 10px 0 0;
     }
     .file-info {
         display: block;
