PID-3545 : tighten file upload css more!
Change-Id: I84c3300d1c4b157097ccb5eb4a9cc924b4ac18f3

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -881,7 +881,7 @@ input[type=file] {
 
         @include opacity(0);
     }
-    button.choose {
+    button.inline.choose {
         display: block;
         text-transform: none;
         margin: 0 10px 0 0;
