--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -999,7 +999,7 @@ input[type=file] {
                 border: 1px solid $color-timberwolf;
             }
         }
-        .choose {
+        button.inline.choose {
             display: none;
         }
         .file-size {
