UX-409 : tweak various css to meet designs
Change-Id: I3ff9232c91496a89e689b8838a695e0f7d0df634

--- a/packages/ui-library/src/css/collapsible-section.scss
+++ b/packages/ui-library/src/css/collapsible-section.scss
@@ -83,7 +83,7 @@
             font-family: $icon-font;
             position: absolute;
             left: 5px;
-            top: 50%;
+            top: 33px;
             margin-top: -9px;
             color: $color-stone;
         }
