--- a/packages/ui-library/src/css/result-sets.scss
+++ b/packages/ui-library/src/css/result-sets.scss
@@ -19,10 +19,10 @@
 }
 
 .result-count {
+    float: right;
     display: inline-block;
-    margin: 0 0 0 30px;
-    line-height: 24px;
-    font-size: 16px;
+    line-height: 26px;
+    font-size: 14px;
     color: $color-elephant;
 }
 
