UIP-1148 Add tab index so modal content will focus and register key events
Change-Id: Ica046f38761192a7320b43415b1f9f6d5c7cb89c

--- a/packages/ui-library/src/css/modals.scss
+++ b/packages/ui-library/src/css/modals.scss
@@ -37,6 +37,7 @@
         display: none;
         position: relative;
         z-index: 1;
+        outline: none; //prevent outline when focused
         top: 0;
         left: 50%;
         height: 100%;
