UIP-1155 : add cancel details-tooltip ability/prop to the wizard cancel button, wizard-step cancel button, modal close button, and button-bar
Change-Id: Ifaf6e96079244f14ad1fca348c203ff7285fc334

--- a/packages/ui-library/src/css/details-tooltip.scss
+++ b/packages/ui-library/src/css/details-tooltip.scss
@@ -81,6 +81,13 @@
             }
         }
     }
+    &.cancel-tooltip {
+        .buttons {
+            .cancel {
+                margin-right: 0 !important;
+            }
+        }
+    }
     > .details-target {
         display: inline-block;
     }
@@ -161,6 +168,7 @@
                 font-size: 15px;
                 padding: 25px;
                 color: $color-slate;
+                text-align: left;
 
                 border-style: solid;
                 border-width: 0 1px 1px;
