UIP-1158, UIP-1159, UIP-1161, UIP-1162, UIP-1165 --> New row accessory for ResultSet component; ResultSet titles w long names overlap row accessories; Tooltip should have the option to be auto width; Style adjustment for new row accessory.
Change-Id: I0cbb04d8d9dd0aba4594aa53ac02a476d2cff7a3

--- a/packages/ui-library/src/css/help.scss
+++ b/packages/ui-library/src/css/help.scss
@@ -239,4 +239,38 @@
             }
         }
     }
+    // auto width tooltips
+    &.width-auto {
+        .tooltip-text {
+            width: auto;
+            left: auto;
+            .tooltip-text-content {
+                width: auto;
+                margin-left: 0;
+                &:before {
+                    left: 0;
+                    margin: 0 0 0 $tooltip-edge-offset;
+                }
+                &:after {
+                    left: 0;
+                    right: 30%;
+                }
+            }
+        }
+    }
+    label {
+        &.row-help {
+            display: inline-block;
+            vertical-align: top;
+            margin: 0;
+            font-size: 13px;
+            text-transform: uppercase;
+            color: $color-white;
+            padding: 3px 5px 0;
+            background-color: $color-elephant;
+            line-height: 14px;
+                            
+            @include border-radius(3px);
+        }
+    }
 }
