--- a/packages/ui-library/src/css/result-sets.scss
+++ b/packages/ui-library/src/css/result-sets.scss
@@ -103,6 +103,11 @@
                 padding-left: 76px;
             }
         }
+        &.subtitle-overflow-visible {
+            .item-sub-title {
+                overflow: visible;
+            }
+        }
         .row-accessories {
             position: absolute;
             right: 65px;
