UIP-1140 --> Remove dependency of inputs.scss on i18n file
Change-Id: I7482165ac9722beff53b550523c6f2e538ea7f84

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -845,13 +845,14 @@ input[type=file] {
         // each item in dropdown
         .select-option,
         .none-option {
-            // Note: decided not to use line-height here for alignment because it causes issues e.g. large font-sizes will overlap, and also looks bad if one item overflows onto 2 lines
+            // Note: decided not to use line-height here for alignment because it causes issues 
+            // e.g. large font-sizes will overlap, and also looks bad if one item overflows onto 2 lines
             padding: 7px 40px 7px 10px;
             font-size: 14px;
 
             &:hover,
             &.highlighted {
-                background: $hoverColor;
+                background: rgba($color-white, 0.5);
             }
         }
     }
