UIP-1182 --> Similar to images, support icons to the left of the text in an ExpandableRow
Change-Id: I975f01eae36c829a7e09d2e1801a05cb63e341c3

--- a/packages/ui-library/src/css/result-sets.scss
+++ b/packages/ui-library/src/css/result-sets.scss
@@ -98,7 +98,14 @@
             max-height: 42px;
             max-width: 42px;
         }
-        &.has-image {
+        .item-icon {
+            position: absolute;
+            left: 19px;
+            top: 18px;
+            font-size: 24px;
+        }
+        &.has-image,
+        &.has-icon {
             .collapsed-content {
                 padding-left: 76px;
             }
