UIP-1186 --> Add Icon Support for Drag'n'Drop Rows; move 'count' styling to layout as now used in multiple components; show icons and count in row-accessories-content
Change-Id: I73e2a6f5d183af2fa30fe602d267f6fb7a6756e2

--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -649,7 +649,18 @@ $layout-nav-width-offset: 15px;
 
 
 // REUSABLE PAGE STYLES ----------------------------------------------------------------------------
-
+.count {
+    color: inherit;
+    border: 1px solid $color-midnight;
+    padding: 0 5px;
+    display: inline-block;
+    min-width: 19px;
+    height: 19px;
+    line-height: 19px;
+    text-align: center;
+    @include box-sizing(border-box);
+    @include border-radius(10px);
+}
 .collapsible-link {
     position: relative;
     display: inline-block;
