--- a/packages/ui-library/src/css/result-sets.scss
+++ b/packages/ui-library/src/css/result-sets.scss
@@ -133,6 +133,11 @@
                 .help-tooltip {
                     vertical-align: middle;
                 }
+                .count {
+                    font-size: 13px;
+                    height: 20px;
+                    line-height: 20px;
+                }
             }
             .button + .button,
             input[type=button],
